[workspace]
members = [
    "ports/servo",
    "ports/libsimpleservo/",
    "tests/unit/*",
]
default-members = [
    "ports/servo",
    "ports/libsimpleservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
hyper_serde = { git = "https://github.com/Eijebong/hyper_serde", branch="bump_mime" }
influent = { git = "https://github.com/Eijebong/influent.rs.git", branch="hyper" }
ws = { git = "https://github.com/Eijebong/ws-rs.git", branch="openssl" }
mime = { git = "https://github.com/Eijebong/mime.git", branch="invalid_names_servo"}
typed-headers = { git = "https://github.com/Eijebong/typed-headers.git", branch="wip" }

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/Eijebong/webrender", branch="base64" }
webrender_api = { git = "https://github.com/Eijebong/webrender", branch="base64" }
